updates to figures for paper 1, mainly for appendices

--- a/paper1-figures/R3-evaluation-transect.ipynb
+++ b/paper1-figures/R3-evaluation-transect.ipynb
@@ -30,6 +30,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Parameters:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imin, imax = 1480, 2180\n",
+    "jmin, jmax = 160, 800\n",
+    "\n",
+    "# model results:\n",
+    "results_folder = '/data/brogalla/run_storage/spin-up1-resus-deep/'\n",
+    "year  = 2002\n",
+    "month = 8\n",
+    "\n",
+    "# colours:\n",
+    "land_color = \"#8b7765\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Load files:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mesh       = nc.Dataset('/data/brogalla/old/meshmasks/ANHA12_mesh1.nc')\n",
+    "mesh_lon   = np.array(mesh.variables['nav_lon'])\n",
+    "mesh_lat   = np.array(mesh.variables['nav_lat'])\n",
+    "mesh_bathy = np.array(mesh.variables['hdept'][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Mn_model     = nc.Dataset(results_folder+'ANHA12_EXH006_'+str(year)+'_monthly.nc')\n",
+    "mn_dis       = np.array(Mn_model.variables['dissolmn'])\n",
+    "lat_model    = np.array(Mn_model.variables['nav_lat'])\n",
+    "lon_model    = np.array(Mn_model.variables['nav_lon'])\n",
+    "depths_model = np.array(Mn_model.variables['deptht'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Mn_data  = pd.read_csv('/ocean/brogalla/GEOTRACES/data/Mn_Integrated_Data_UBC-UVic_4-17-19.csv')\n",
+    "\n",
+    "dMn_BB1  = Mn_data['BB1'].dropna()[1:].astype('float'); dMn_BB2 = Mn_data['BB2'].dropna()[1:].astype('float');\n",
+    "dMn_BB3  = Mn_data['BB3'].dropna()[1:].astype('float'); dMn_CB1 = Mn_data['CB1'].dropna()[1:].astype('float');\n",
+    "dMn_CB2  = Mn_data['CB2'].dropna()[1:].astype('float'); dMn_CB3 = Mn_data['CB3'].dropna()[1:].astype('float');\n",
+    "dMn_CB4  = Mn_data['CB4'].dropna()[1:].astype('float'); dMn_CAA1 = Mn_data['CAA1'].dropna()[1:].astype('float');\n",
+    "dMn_CAA2 = Mn_data['CAA2'].dropna()[1:].astype('float'); dMn_CAA3 = Mn_data['CAA3'].dropna()[1:].astype('float');\n",
+    "dMn_CAA4 = Mn_data['CAA4'].dropna()[1:].astype('float'); dMn_CAA5 = Mn_data['CAA5'].dropna()[1:].astype('float');\n",
+    "dMn_CAA6 = Mn_data['CAA6'].dropna()[1:].astype('float'); dMn_CAA7 = Mn_data['CAA7'].dropna()[1:].astype('float');\n",
+    "dMn_CAA8 = Mn_data['CAA8'].dropna()[1:].astype('float'); dMn_CAA9 = Mn_data['CAA9'].dropna()[1:].astype('float');\n",
+    "\n",
+    "depth_BB1  = Mn_data['Depth.2'].dropna(); depth_BB2 = Mn_data['Depth.3'].dropna();\n",
+    "depth_BB3  = Mn_data['Depth.4'].dropna(); depth_CB1 = Mn_data['Depth.14'].dropna();\n",
+    "depth_CB2  = Mn_data['Depth.15'].dropna(); depth_CB3 = Mn_data['Depth.16'].dropna();\n",
+    "depth_CB4  = Mn_data['Depth.17'].dropna(); depth_CAA1 = Mn_data['Depth.5'].dropna();\n",
+    "depth_CAA2 = Mn_data['Depth.6'].dropna(); depth_CAA3 = Mn_data['Depth.7'].dropna();\n",
+    "depth_CAA4 = Mn_data['Depth.8'].dropna(); depth_CAA5 = Mn_data['Depth.9'].dropna();\n",
+    "depth_CAA6 = Mn_data['Depth.10'].dropna(); depth_CAA7 = Mn_data['Depth.11'].dropna();\n",
+    "depth_CAA8 = Mn_data['Depth.12'].dropna(); depth_CAA9 = Mn_data['Depth.13'].dropna();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Pb_data   = pd.read_csv('/ocean/brogalla/GEOTRACES/data/Pb-paper-data.csv')\n",
+    "stn_names = Pb_data['Station names'].dropna().astype('str')\n",
+    "lons      = Pb_data['station lon'].astype('float').dropna().values\n",
+    "lats      = Pb_data['Station lat'].astype('float').dropna().values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Functions:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -146,33 +256,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Load model bathymetry and results\n",
-    "\n",
-    "Bathymetry:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "land_color = \"#8b7765\"\n",
-    "\n",
-    "# load bathymetry file:\n",
-    "mesh = nc.Dataset('/data/brogalla/old/meshmasks/ANHA12_mesh1.nc')\n",
-    "mesh_lon = mesh.variables['nav_lon']\n",
-    "mesh_lat = mesh.variables['nav_lat']\n",
-    "mesh_bathy = mesh.variables['hdept'][0]\n",
-    "mesh_lon = np.array(mesh_lon)\n",
-    "mesh_lat = np.array(mesh_lat)\n",
-    "mesh_bathy = np.array(mesh_bathy)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -191,26 +274,6 @@
     "        transect_j = np.append(transect_j, j)\n",
     "    \n",
     "    return transect_i, transect_j"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sample results:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Mn_model     = nc.Dataset('/data/brogalla/run_storage/spin-up1-resus-deep/ANHA12_EXH006_2002_monthly.nc')\n",
-    "mn_dis       = np.array(Mn_model.variables['dissolmn'])\n",
-    "lat_model    = np.array(Mn_model.variables['nav_lat'])\n",
-    "lon_model    = np.array(Mn_model.variables['nav_lon'])\n",
-    "depths_model = np.array(Mn_model.variables['deptht'])"
    ]
   },
   {
@@ -244,83 +307,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### GEOTRACES:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Mn_data = pd.read_csv('/ocean/brogalla/GEOTRACES/data/Mn_Integrated_Data_UBC-UVic_4-17-19.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dMn_BB1 = np.array(Mn_data['BB1'].dropna()[1:].astype('float'))\n",
-    "dMn_BB2 = np.array(Mn_data['BB2'].dropna()[1:].astype('float'))\n",
-    "dMn_BB3 = np.array(Mn_data['BB3'].dropna()[1:].astype('float'))\n",
-    "dMn_CB1 = np.array(Mn_data['CB1'].dropna()[1:].astype('float'))\n",
-    "dMn_CB2 = np.array(Mn_data['CB2'].dropna()[1:].astype('float'))\n",
-    "dMn_CB3 = np.array(Mn_data['CB3'].dropna()[1:].astype('float'))\n",
-    "dMn_CB4 = np.array(Mn_data['CB4'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA1 = np.array(Mn_data['CAA1'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA2 = np.array(Mn_data['CAA2'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA3 = np.array(Mn_data['CAA3'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA4 = np.array(Mn_data['CAA4'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA5 = np.array(Mn_data['CAA5'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA6 = np.array(Mn_data['CAA6'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA7 = np.array(Mn_data['CAA7'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA8 = np.array(Mn_data['CAA8'].dropna()[1:].astype('float'))\n",
-    "dMn_CAA9 = np.array(Mn_data['CAA9'].dropna()[1:].astype('float'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "depth_BB1 = np.array(Mn_data['Depth.2'].dropna())\n",
-    "depth_BB2 = np.array(Mn_data['Depth.3'].dropna())\n",
-    "depth_BB3 = np.array(Mn_data['Depth.4'].dropna())\n",
-    "depth_CB1 = np.array(Mn_data['Depth.14'].dropna())\n",
-    "depth_CB2 = np.array(Mn_data['Depth.15'].dropna())\n",
-    "depth_CB3 = np.array(Mn_data['Depth.16'].dropna())\n",
-    "depth_CB4 = np.array(Mn_data['Depth.17'].dropna())\n",
-    "depth_CAA1 = np.array(Mn_data['Depth.5'].dropna())\n",
-    "depth_CAA2 = np.array(Mn_data['Depth.6'].dropna())\n",
-    "depth_CAA3 = np.array(Mn_data['Depth.7'].dropna())\n",
-    "depth_CAA4 = np.array(Mn_data['Depth.8'].dropna())\n",
-    "depth_CAA5 = np.array(Mn_data['Depth.9'].dropna())\n",
-    "depth_CAA6 = np.array(Mn_data['Depth.10'].dropna())\n",
-    "depth_CAA7 = np.array(Mn_data['Depth.11'].dropna())\n",
-    "depth_CAA8 = np.array(Mn_data['Depth.12'].dropna())\n",
-    "depth_CAA9 = np.array(Mn_data['Depth.13'].dropna())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Pb_data   = pd.read_csv('/ocean/brogalla/GEOTRACES/data/Pb-paper-data.csv')\n",
-    "stn_names = Pb_data['Station names'].dropna().astype('str')\n",
-    "lons      = Pb_data['station lon'].astype('float').dropna().values\n",
-    "lats      = Pb_data['Station lat'].astype('float').dropna().values"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Create a transect following the GEOTRACES stations:"
+    "##### Figure of transect along stations:"
    ]
   },
   {
@@ -374,13 +361,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot the measured values of dissolved Mn with depth:"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
@@ -399,27 +379,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot bathymetry for this area"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transect_i, transect_j = find_index_ANHA12_full(transect_vlons, transect_vlats)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
+    "transect_i, transect_j = find_index_ANHA12_full(transect_vlons, transect_vlats)\n",
+    "\n",
     "transect_bathy       = np.array([])\n",
     "transect_lons_bathy  = np.array([])\n",
     "transect_lats_bathy  = np.array([])\n",
@@ -442,19 +408,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "transect_modeli, transect_modelj = find_index_ANHA12_sub(transect_vlons, transect_vlats)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
+    "transect_modeli, transect_modelj = find_index_ANHA12_sub(transect_vlons, transect_vlats)\n",
+    "\n",
     "lons_modelt = np.array([])\n",
     "lats_modelt = np.array([])\n",
     "transect_model_distances = np.array([])\n",
@@ -474,7 +433,7 @@
     "    lats_modelt = np.append(lats_modelt, lat)\n",
     "    transect_model_distances = np.append(transect_model_distances, distance)\n",
     "    \n",
-    "    mn_dt = mn_dis[8,0,:,int(transect_modeli[n]), int(transect_modelj[n])]\n",
+    "    mn_dt = mn_dis[month,0,:,int(transect_modeli[n]), int(transect_modelj[n])]\n",
     "    mn_dis_t[:,n] = mn_dt"
    ]
   },
