rivers figures updates

--- a/paper2-figures/R6-CAA-freshwater-content.ipynb
+++ b/paper2-figures/R6-CAA-freshwater-content.ipynb
@@ -29,6 +29,7 @@
     "from math import sin, cos, sqrt, atan2, radians\n",
     "import warnings\n",
     "import seaborn as sns\n",
+    "from dateutil.relativedelta import relativedelta\n",
     "import glob\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -317,6 +318,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = np.empty((19*12, imax-imin, jmax-jmin))\n",
+    "i  = 0\n",
+    "for year in range(2002, 2020):\n",
+    "# for year in range(2002, 2005):\n",
+    "    for month in range(0,12):\n",
+    "        c = nc.Dataset('/data/brogalla/runoff/ANHA12_runoff_monthly_combined_Dai_Trenberth_Bamber_y'+str(year)+'.nc','r')\n",
+    "        rf[i*12+month,:,:] = np.array(c.variables['runoff'])[month,imin:imax,jmin:jmax]\n",
+    "        \n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_CAA_rf = np.tile(mask_CAA[imin:imax,jmin:jmax], (228,1,1))\n",
+    "rf_dates    = np.array([dt.datetime(2002,1,1) + relativedelta(months=+i) for i in range(0,228)])\n",
+    "rf_CAA      = np.ma.sum(np.ma.masked_where(mask_CAA_rf==0, rf), axis=(1,2))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -336,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -381,6 +410,9 @@
     "    sns.lineplot(dates[skip_yrs:], glac, linewidth=1, color=cglac, ax=ax)\n",
     "    sns.lineplot(dates[skip_yrs:], glac_ave, color=cglac, linewidth=4.5, label=r'Glacial runoff')\n",
     "    \n",
+    "    # River discharge sum:\n",
+    "#     sns.lineplot(rf_dates, rf_CAA*30, linewidth=2.5, color='k', ax=ax)\n",
+    "    \n",
     "    # Other figure settings\n",
     "    ax.set_xlabel('Year', fontsize=14)\n",
     "    ax.set_ylabel('Percent above 2002 baseline',fontsize=14)\n",
@@ -396,8 +428,8 @@
     "    leg  = ax.legend(loc=(1.05, 0.59), frameon=True, framealpha=0.7, fontsize=12)\n",
     "    leg.get_frame().set_linewidth(0.0)\n",
     "    \n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/R6-CAA-runoff-'+ \\\n",
-    "            str(date.today().strftime('%Y%m%d')) + '.png', bbox_inches='tight',dpi=300)"
+    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/rivers/R6-CAA-runoff-'+ \\\n",
+    "#             str(date.today().strftime('%Y%m%d')) + '.png', bbox_inches='tight',dpi=300)"
    ]
   },
   {
