current state of paper1-figures before I prepare them in publication ready format

--- a/paper1-figures/A6-scavenging-rates.ipynb
+++ b/paper1-figures/A6-scavenging-rates.ipynb
@@ -385,6 +385,116 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.894</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.890</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   210.4</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Fri, 24 Jul 2020</td> <th>  Prob (F-statistic):</th> <td>1.12e-13</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>11:39:06</td>     <th>  Log-Likelihood:    </th> <td>-0.82691</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>    26</td>      <th>  AIC:               </th> <td>   3.654</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>    25</td>      <th>  BIC:               </th> <td>   4.912</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     1</td>      <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>   \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "   <td></td>     <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x1</th> <td>    1.4790</td> <td>    0.102</td> <td>   14.506</td> <td> 0.000</td> <td>    1.269</td> <td>    1.689</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td> 0.048</td> <th>  Durbin-Watson:     </th> <td>   1.003</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.976</td> <th>  Jarque-Bera (JB):  </th> <td>   0.170</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.088</td> <th>  Prob(JB):          </th> <td>   0.919</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 2.645</td> <th>  Cond. No.          </th> <td>    1.00</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                      y   R-squared:                       0.894\n",
+       "Model:                            OLS   Adj. R-squared:                  0.890\n",
+       "Method:                 Least Squares   F-statistic:                     210.4\n",
+       "Date:                Fri, 24 Jul 2020   Prob (F-statistic):           1.12e-13\n",
+       "Time:                        11:39:06   Log-Likelihood:               -0.82691\n",
+       "No. Observations:                  26   AIC:                             3.654\n",
+       "Df Residuals:                      25   BIC:                             4.912\n",
+       "Df Model:                           1                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "x1             1.4790      0.102     14.506      0.000       1.269       1.689\n",
+       "==============================================================================\n",
+       "Omnibus:                        0.048   Durbin-Watson:                   1.003\n",
+       "Prob(Omnibus):                  0.976   Jarque-Bera (JB):                0.170\n",
+       "Skew:                          -0.088   Prob(JB):                        0.919\n",
+       "Kurtosis:                       2.645   Cond. No.                         1.00\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "\n",
+    "xp      = np.linspace(0,1.0,20)\n",
+    "xp_fit  = xp.reshape((-1, 1)) \n",
+    "dmn_fit = dmn.reshape((-1, 1))\n",
+    "pmn_fit = pmn\n",
+    "\n",
+    "ols = sm.OLS(pmn_fit, dmn_fit)\n",
+    "ols_result = ols.fit()\n",
+    "ols_result.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [
@@ -419,6 +529,7 @@
     "r_sq    = model.score(dmn_fit, pmn_fit)\n",
     "yp_pred = model.predict(xp_fit)\n",
     "print('slope: ', model.coef_)\n",
+    "print('score: ', model.score)\n",
     "\n",
     "\n",
     "st = sns.axes_style(\"whitegrid\")\n",
@@ -453,7 +564,7 @@
     "    ax.text(0.76, 0.08,'[pMn] = 1.48 [dMn]', fontsize=14, horizontalalignment='center', \\\n",
     "            verticalalignment='center', transform=ax.transAxes);\n",
     "\n",
-    "fig.savefig('/ocean/brogalla/GEOTRACES/figures/A4-scavenging-rate.png', bbox_inches='tight', dpi=300)"
+    "# fig.savefig('/ocean/brogalla/GEOTRACES/figures/A4-scavenging-rate.png', bbox_inches='tight', dpi=300)"
    ]
   },
   {
